bindings/py/cffi-dggal.h

typedef eC_Instance eC_DGGSJSONGrid;
typedef struct eC_GeoExtent eC_GeoExtent;
typedef eC_Instance eC_JSONSchema;
typedef int eC_JSONSchemaType;
struct class_members_DGGSJSONDimension
{
   eC_String name;
   eC_Array interval;
   eC_DGGSJSONGrid grid;
   eC_String definition;
   eC_String unit;
   eC_String unitLang;
};
struct class_members_DGGSJSONGrid
{
   int cellsCount;
   double resolution;
   eC_Array coordinates;
   eC_Array boundsCoordinates;
   eC_Array relativeBounds;
   eC_FieldValue firstCoordinate;
};
struct class_members_DGGSJSONShape
{
   int count;
   int subZones;
   eC_Map dimensions;
};
struct eC_GeoExtent
{
   eC_GeoPoint ll;
   eC_GeoPoint ur;
};
extern void (* GeoExtent_clear)(eC_GeoExtent * __this);
extern eC_bool (* GeoExtent_clip)(eC_GeoExtent * __this, const eC_GeoExtent * e, const eC_GeoExtent * clipExtent);
extern eC_bool (* GeoExtent_clipHandlingDateline)(eC_GeoExtent * __this, const eC_GeoExtent * e, const eC_GeoExtent * clipExtent);
extern void (* GeoExtent_doUnionDL)(eC_GeoExtent * __this, const eC_GeoExtent * e);
extern eC_bool (* GeoExtent_intersects)(eC_GeoExtent * __this, const eC_GeoExtent * b);
extern eC_Property * property_GeoExtent_nonNull;
extern eC_bool (* GeoExtent_get_nonNull)(const eC_GeoExtent * g);
extern eC_Property * property_GeoExtent_geodeticArea;
extern double (* GeoExtent_get_geodeticArea)(const eC_GeoExtent * g);
extern int HEALPixProjection_forward_vTblID;
extern eC_Method * method_HEALPixProjection_forward;
extern int HEALPixProjection_inverse_vTblID;
extern eC_Method * method_HEALPixProjection_inverse;
struct class_members_JSONSchema
{
   eC_String schema;
   eC_String id;
   eC_String title;
   eC_String comment;
   eC_String description;
   eC_FieldValue Default;
   eC_bool readOnly;
   eC_bool writeOnly;
   eC_Array examples;
   eC_Array multipleOf;
   eC_JSONSchemaType type;
   eC_Array Enum;
   eC_String format;
   eC_String contentMediaType;
   double maximum;
   double exclusiveMaximum;
   double minimum;
   double exclusiveMinimum;
   eC_String pattern;
   eC_JSONSchema items;
   int maxItems;
   int minItems;
   eC_bool uniqueItems;
   eC_String contains;
   int maxProperties;
   int minProperties;
   eC_Array required;
   eC_JSONSchema additionalProperties;
   eC_Map definitions;
   eC_Map properties;
   eC_Map patternProperties;
   eC_Map dependencies;
   eC_String propertyNames;
   eC_String contentEncoding;
   eC_JSONSchema If;
   eC_JSONSchema Then;
   eC_JSONSchema Else;
   eC_Array allOf;
   eC_Array anyOf;
   eC_Array oneOf;
   eC_JSONSchema Not;
   eC_String xogcrole;
   int xogcpropertySeq;
};