bindings/c_fn/dggal_c.h

typedef char * String;
typedef double Radians;
struct GeoPoint
{
   Radians lat, lon;
};
typedef struct GeoPoint GeoPoint;
struct GeoExtent
{
   GeoPoint ll, ur;
};
typedef struct GeoExtent GeoExtent;