bindings/rust/dggal_cffi.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of class_members_DGGSJSONDimension"]
        [::std::mem::size_of::<class_members_DGGSJSONDimension>() - 48usize];
    ["Alignment of class_members_DGGSJSONDimension"]
        [::std::mem::align_of::<class_members_DGGSJSONDimension>() - 8usize];
    ["Offset of field: class_members_DGGSJSONDimension::name"]
        [::std::mem::offset_of!(class_members_DGGSJSONDimension, name) - 0usize];
    ["Offset of field: class_members_DGGSJSONDimension::interval"]
        [::std::mem::offset_of!(class_members_DGGSJSONDimension, interval) - 8usize];
    ["Offset of field: class_members_DGGSJSONDimension::grid"]
        [::std::mem::offset_of!(class_members_DGGSJSONDimension, grid) - 16usize];
    ["Offset of field: class_members_DGGSJSONDimension::definition"]
        [::std::mem::offset_of!(class_members_DGGSJSONDimension, definition) - 24usize];
    ["Offset of field: class_members_DGGSJSONDimension::unit"]
        [::std::mem::offset_of!(class_members_DGGSJSONDimension, unit) - 32usize];
    ["Offset of field: class_members_DGGSJSONDimension::unitLang"]
        [::std::mem::offset_of!(class_members_DGGSJSONDimension, unitLang) - 40usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct class_members_DGGSJSONGrid {
    pub cellsCount: ::std::os::raw::c_int,
    pub resolution: f64,
    pub coordinates: Array,
    pub boundsCoordinates: Array,
    pub relativeBounds: Array,
    pub firstCoordinate: FieldValue,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of class_members_DGGSJSONGrid"]
        [::std::mem::size_of::<class_members_DGGSJSONGrid>() - 56usize];
    ["Alignment of class_members_DGGSJSONGrid"]
        [::std::mem::align_of::<class_members_DGGSJSONGrid>() - 8usize];
    ["Offset of field: class_members_DGGSJSONGrid::cellsCount"]
        [::std::mem::offset_of!(class_members_DGGSJSONGrid, cellsCount) - 0usize];
    ["Offset of field: class_members_DGGSJSONGrid::resolution"]
        [::std::mem::offset_of!(class_members_DGGSJSONGrid, resolution) - 8usize];
    ["Offset of field: class_members_DGGSJSONGrid::coordinates"]
        [::std::mem::offset_of!(class_members_DGGSJSONGrid, coordinates) - 16usize];
    ["Offset of field: class_members_DGGSJSONGrid::boundsCoordinates"]
        [::std::mem::offset_of!(class_members_DGGSJSONGrid, boundsCoordinates) - 24usize];
    ["Offset of field: class_members_DGGSJSONGrid::relativeBounds"]
        [::std::mem::offset_of!(class_members_DGGSJSONGrid, relativeBounds) - 32usize];
    ["Offset of field: class_members_DGGSJSONGrid::firstCoordinate"]
        [::std::mem::offset_of!(class_members_DGGSJSONGrid, firstCoordinate) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct class_members_DGGSJSONShape {
    pub count: ::std::os::raw::c_int,
    pub subZones: ::std::os::raw::c_int,
    pub dimensions: Map,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of class_members_DGGSJSONShape"]
        [::std::mem::size_of::<class_members_DGGSJSONShape>() - 16usize];
    ["Alignment of class_members_DGGSJSONShape"]
        [::std::mem::align_of::<class_members_DGGSJSONShape>() - 8usize];
    ["Offset of field: class_members_DGGSJSONShape::count"]
        [::std::mem::offset_of!(class_members_DGGSJSONShape, count) - 0usize];
    ["Offset of field: class_members_DGGSJSONShape::subZones"]
        [::std::mem::offset_of!(class_members_DGGSJSONShape, subZones) - 4usize];
    ["Offset of field: class_members_DGGSJSONShape::dimensions"]
        [::std::mem::offset_of!(class_members_DGGSJSONShape, dimensions) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GeoExtent {
    pub ll: GeoPoint,
    pub ur: GeoPoint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GeoExtent"][::std::mem::size_of::<GeoExtent>() - 32usize];
    ["Alignment of GeoExtent"][::std::mem::align_of::<GeoExtent>() - 8usize];
    ["Offset of field: GeoExtent::ll"][::std::mem::offset_of!(GeoExtent, ll) - 0usize];
    ["Offset of field: GeoExtent::ur"][::std::mem::offset_of!(GeoExtent, ur) - 16usize];
};
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_clear:
        ::std::option::Option</*unsafe*/ extern "C" fn(__this: *mut GeoExtent)>;
}
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_clip: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: *mut GeoExtent,
            e: *const GeoExtent,
            clipExtent: *const GeoExtent,
        ) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_clipHandlingDateline: ::std::option::Option<
        /*unsafe*/ extern "C" fn(
            __this: *mut GeoExtent,
            e: *const GeoExtent,
            clipExtent: *const GeoExtent,
        ) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_doUnionDL:
        ::std::option::Option</*unsafe*/ extern "C" fn(__this: *mut GeoExtent, e: *const GeoExtent)>;
}
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_intersects: ::std::option::Option<
        /*unsafe*/ extern "C" fn(__this: *mut GeoExtent, b: *const GeoExtent) -> bool_,
    >;
}
/*unsafe*/ extern "C" {
    pub static mut property_GeoExtent_nonNull: *mut Property;
}
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_get_nonNull:
        ::std::option::Option</*unsafe*/ extern "C" fn(g: *const GeoExtent) -> bool_>;
}
/*unsafe*/ extern "C" {
    pub static mut property_GeoExtent_geodeticArea: *mut Property;
}
/*unsafe*/ extern "C" {
    pub static mut GeoExtent_get_geodeticArea:
        ::std::option::Option</*unsafe*/ extern "C" fn(g: *const GeoExtent) -> f64>;
}
/*unsafe*/ extern "C" {
    pub static mut HEALPixProjection_forward_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_HEALPixProjection_forward: *mut Method;
}
/*unsafe*/ extern "C" {
    pub static mut HEALPixProjection_inverse_vTblID: ::std::os::raw::c_int;
}
/*unsafe*/ extern "C" {
    pub static mut method_HEALPixProjection_inverse: *mut Method;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct class_members_JSONSchema {
    pub schema: String,
    pub id: String,
    pub title: String,
    pub comment: String,
    pub description: String,
    pub Default: FieldValue,
    pub readOnly: bool_,
    pub writeOnly: bool_,
    pub examples: Array,
    pub multipleOf: Array,
    pub type_: JSONSchemaType,
    pub Enum: Array,
    pub format: String,
    pub contentMediaType: String,
    pub maximum: f64,
    pub exclusiveMaximum: f64,
    pub minimum: f64,
    pub exclusiveMinimum: f64,
    pub pattern: String,
    pub items: JSONSchema,
    pub maxItems: ::std::os::raw::c_int,
    pub minItems: ::std::os::raw::c_int,
    pub uniqueItems: bool_,
    pub contains: String,
    pub maxProperties: ::std::os::raw::c_int,
    pub minProperties: ::std::os::raw::c_int,
    pub required: Array,
    pub additionalProperties: JSONSchema,
    pub definitions: Map,
    pub properties: Map,
    pub patternProperties: Map,
    pub dependencies: Map,
    pub propertyNames: String,
    pub contentEncoding: String,
    pub If: JSONSchema,
    pub Then: JSONSchema,
    pub Else: JSONSchema,
    pub allOf: Array,
    pub anyOf: Array,
    pub oneOf: Array,
    pub Not: JSONSchema,
    pub xogcrole: String,
    pub xogcpropertySeq: ::std::os::raw::c_int,
}
